--- a/css/exercise3.css
+++ b/css/exercise3.css
@@ -1,3 +1,25 @@
 body {
   background-color: transparent;
+  margin: 0;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+.greeting {
+  background-color: #C8E8ED;
+  border: 10px solid black;
+  padding: 20px;
+}
+
+.middle, .bottom {
+  width: 200px; height: 200px;
+}
+.middle {
+  background-color: red;
+}
+
+.bottom {
+  background-color: yellow;
 }
