--- a/css/exercise3.css
+++ b/css/exercise3.css
@@ -1,16 +1,22 @@
 body {
   background-color: transparent;
   margin: 0;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
   margin-top: 0;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  letter-spacing: .2em;
+  font-size: 48px;
 }
 
 .greeting {
   background-color: #C8E8ED;
-  border: 10px solid black;
-  padding: 20px;
+  position: relative;
+  padding-top: 150px;
+  padding-bottom: 0
 }
 
 .middle, .bottom {
@@ -22,4 +28,15 @@ h1 {
 
 .bottom {
   background-color: yellow;
+}
+
+.bottom-bulb {
+  position: absolute;
+  left: 20%;
+  top: 50%;
+}
+
+.top-bulb {
+  position: absolute;
+  right: 25%;
 }
