--- a/css/exercise3.css
+++ b/css/exercise3.css
@@ -3,31 +3,22 @@ body {
   margin: 0;
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  color: #56686b;
 }
 
 h1 {
   margin-top: 0;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
   letter-spacing: .2em;
-  font-size: 48px;
+  font-size: 90px;
 }
 
 .greeting {
-  background-color: #C8E8ED;
+  background-color: #c8e8ed;
   position: relative;
   padding-top: 150px;
   padding-bottom: 0
-}
-
-.middle, .bottom {
-  width: 200px; height: 200px;
-}
-.middle {
-  background-color: red;
-}
-
-.bottom {
-  background-color: yellow;
 }
 
 .bottom-bulb {
@@ -38,5 +29,111 @@ h1 {
 
 .top-bulb {
   position: absolute;
-  right: 25%;
+  right: 15%;
+  top: 25%;
+}
+
+div.greeting p {
+  font-size: 2.2rem;
+  margin-bottom: 45px;
+  font-weight: bold;
+}
+
+h3, a {
+  color: #2892A3;
+}
+
+a {
+  text-decoration: none;
+  margin: 10px 20px
+}
+
+a:hover {
+  color: #C8E8ED;
+}
+
+div.profile img {
+  border-radius: 100%;
+  width: 200px;
+  margin-top: 50px;
+}
+
+div.profile p {
+  width: 30%;
+  text-align: left;
+  margin: 30px auto;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.skills-img {
+  width: 50%;
+  float: left;
+  margin-right: 30px;
+  clear: left;
+}
+
+.prog-img {
+  width: 50%;
+  float: right;
+  margin-left: 30px;
+  clear: right;
+}
+
+hr {
+  border: 8px dotted #c4e1e5 ;
+  border-bottom: none;
+  width: 5%;
+}
+
+.contact-me p {
+  width: 30%;
+  margin: 30px auto 60px;
+  text-align: left
+}
+
+.butn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  text-shadow: 11px 11px 24px #666666;
+  font-family: Courier New;
+  color: #c4e9f2;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 100px
+}
+
+.butn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.bottom-container {
+  background-color: #A3B7BA;
+  padding: 20px 10px;
+}
+
+.copyright {
+  color: #eaf6f6;
+  font-size: .75rem;
+  margin-top: 50px
 }
